# russcan-lite

./: .gitignore  Cargo.toml  README.md
crates/russcan/: Cargo.toml
crates/russcan-bytecode/: Cargo.toml
crates/russcan-bytecode/src/: crc32c.rs  lib.rs  rose.rs
crates/russcan-hwlm/: Cargo.toml
crates/russcan-hwlm/src/: fdr.rs  lib.rs  noodle.rs  teddy.rs
crates/russcan-nfa/: Cargo.toml
crates/russcan-nfa/src/: lib.rs
crates/russcan-rose/: Cargo.toml
crates/russcan-rose/src/: lib.rs  literal.rs
crates/russcan-simd/: Cargo.toml
crates/russcan-simd/src/: aarch64.rs  lib.rs  scalar.rs  x86.rs
crates/russcan-simd/src/accel/: generic.rs  masks.rs  mod.rs  reference.rs  tests.rs
crates/russcan/fuzz/: Cargo.toml  run_4h.sh
crates/russcan/fuzz/corpus/fuzz_load/: basic.db  t4_long.db  u1_len1.db  u2_len12.db
crates/russcan/fuzz/corpus/fuzz_scan/: fdrlit.corpus  realpack.corpus  t3_len7.corpus
crates/russcan/fuzz/fuzz_targets/: fuzz_load.rs  fuzz_scan.rs
crates/russcan/src/: lib.rs
crates/russcan/tests/: hostile_db.rs
crates/russcan/tests/fixtures/: basic.corpus  basic.golden  fdr400.corpus  fdr400.db  fdr400.golden  fdrlit.db  fdrlit.golden  realpack.db  realpack.golden  t3_len7.db  t3_len7.golden  t4_long.corpus  t4_long.golden  u1_len1.corpus  u1_len1.golden  u2_len12.corpus  u2_len12.golden
