[package]
name = "russcan"
description = "Публичный API: block-mode сканирование по байткоду vectorscan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
russcan-bytecode.workspace = true
russcan-rose.workspace = true
russcan-hwlm.workspace = true

[[bin]]
name = "scan_db"
path = "src/bin/scan_db.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
